link to artwork page instead on ranking calendar

--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -70,7 +70,7 @@
             <div class="card h-100">
               {{ if day.DayNumber > 0 }}
                 {{ if day.ImageURL }}
-                  <a href="{{ day.RankingLink }}" class="text-decoration-none">
+                  <a href="{{ day.ArtworkLink }}" class="text-decoration-none">
                     <img src="{{ day.ImageURL }}" alt="Day {{ day.DayNumber }}" class="card-img-top img-fluid object-fit-cover h-100" />
                     <div class="card-img-overlay d-flex align-items-start rounded p-2">
                       <p class="card-text text-white fw-bold bg-dark bg-opacity-75 rounded-pill px-2 py-1 mb-0">{{ day.DayNumber }}</p>
