--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }}
 {{- block body() }}
-<div class="row justify-content-center mb-5">
+<div class="row justify-content-center">
 <!-- col-md-9 to ensure that artworks don't take forever to scroll past, especially if there are multiple, but col-sm-12 to display artworks at full width on small devices -->
 <div class="col-sm-12 col-md-9">
   <!-- The artwork fragment -->
