--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -1,8 +1,8 @@
 {{- extends "layout/default" }}
 {{- block body() }}
 <div class="row justify-content-center">
+  <h1 class="h3 fw-bold text-center mb-4">Ranking calendar</h1>
   <div class="col-12">
-    <h1 class="h3 fw-bold mb-3">Ranking calendar</h1>
     <div class="row g-3">
       <div class="col-sm-12 col-lg-9">
         <div class="card border-0">
