Improve CreatePaginator with flexible margins and validation
This commit improves the CreatePaginator function by adding support for
customisable page margins and dropdown offsets. It also introduces
input validation and error handling to ensure proper usage.

--- a/assets/views/tag.jet.html
+++ b/assets/views/tag.jet.html
@@ -176,7 +176,7 @@
 
     <!-- Pagination -->
     {{- url := unfinishedQuery(.QueriesC, "page") }}
-    {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1) }}
+    {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1, 1, 5) }}
     {{- yield pagination(data=paginationData) }}
 </div>
 {{- end }}
